# pyturb

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
src/pyturb/: __init__.py  cli.py  despike.py  io.py  merge.py  noise.py  pfile.py  processing.py  profile.py  shear.py  signal.py  temperature.py  viscosity.py
src/pyturb/_pfile/: __init__.py  config.py  convert.py  deconvolve.py  gradT.py  preprocess.py  reader.py  sensors.py  to_xarray.py
tests/: conftest.py  test_bench_spectra.py  test_cli.py  test_convert.py  test_deconvolve.py  test_extract.py  test_goodman.py  test_gradT.py  test_netcdf.py  test_reader.py  test_to_xarray.py
tests/data/: RIOTSHAKE_VMP142_0002.p  RIOTSHAKE_VMP142_0010_cut.p
